Loading page on potterybankids causes reproducible assertion failure in debug builds https://bugs.webkit.org/show_bug.cgi?id=69185 <rdar://problem/10218241>

Reviewed by Simon Fraser.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::computeRepaintRects): Remove assert condition that isn't guaranteed
to be true.


git-svn-id: svn://svn.chromium.org/blink/trunk@96437 bbb929c8-8fbe-4397-9dbb-9b2b20218538