third_party/WebKit/Source/WebCore/rendering/RenderLayer.cpp
@@ -401,7 +401,6 @@ LayoutRect RenderLayer::repaintRectIncludingDescendants() const
 
 void RenderLayer::computeRepaintRects(IntPoint* offsetFromRoot)
 {
-    ASSERT(m_hasVisibleContent);
     ASSERT(!m_visibleContentStatusDirty);
 
     RenderBoxModelObject* repaintContainer = renderer()->containerForRepaint();
